--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,7 +2,8 @@ baseURL: https://example.org/
 languageCode: en-us
 title: Daniil Roman
 
-paginate: 5
+pagination:
+  pagerSize: 5
 theme: PaperMod
 
 enableRobotsTXT: true
