Add .nojekyll File

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,10 @@ jobs:
       - name: Build Website
         run: hugo --minify
 
+      - name: Add .nojekyll File
+        run: |
+          touch ./public/.nojekyll
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
