--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,19 +26,19 @@ jobs:
         with:
           hugo-version: 'latest'
 
-      - uses: actions/cache@v4
-        with:
-          path: ${{ env.HUGO_CACHEDIR }}
-          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-hugomod-
+#      - uses: actions/cache@v4
+#        with:
+#          path: ${{ env.HUGO_CACHEDIR }}
+#          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.sum') }}
+#          restore-keys: |
+#            ${{ runner.os }}-hugomod-
 
       - name: Build Website
         run: hugo --minify
 
-      - name: Add .nojekyll File
-        run: |
-          touch ./public/.nojekyll
+#      - name: Add .nojekyll File
+#        run: |
+#          touch ./public/.nojekyll
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
