--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,7 +48,7 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "<link / abs url>"
+    favicon: /waving-hand.svg
     favicon16x16: "<link / abs url>"
     favicon32x32: "<link / abs url>"
     apple_touch_icon: "<link / abs url>"
@@ -56,7 +56,7 @@ params:
 
   label:
     text: "Home"
-    icon: /apple-touch-icon.png
+#    icon: /waving-hand.svg
     iconHeight: 35
 
   # profile-mode
