--- a/hugo.yaml
+++ b/hugo.yaml
@@ -26,8 +26,8 @@ params:
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
-  defaultTheme: auto # dark, light
-  disableThemeToggle: false
+  defaultTheme: dark # auto, dark, light
+  disableThemeToggle: true
 
   ShowReadingTime: true
   ShowShareButtons: false
