--- a/hugo.yaml
+++ b/hugo.yaml
@@ -42,7 +42,7 @@ params:
   comments: true
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
 
   assets:
