--- a/hugo.yaml
+++ b/hugo.yaml
@@ -87,7 +87,7 @@ params:
     - name: dev
       url: "https://dev.to/daniilroman"
     - name: substack
-      url: "https://techradar.substack.com/"
+      url: "https://databasesradar.substack.com/"
     - name: x
       url: "https://x.com/daniil__roman"
     - name: medium
