Add a newsletter onto projects page

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -88,8 +88,8 @@ params:
       url: "https://dev.to/daniilroman"
     - name: substack
       url: "https://databasesradar.substack.com/"
-    - name: x
-      url: "https://x.com/daniil__roman"
+    # - name: x
+      # url: "https://x.com/daniil__roman"
     - name: medium
       url: "https://medium.com/@daniil_roman"
     - name: email
